<resources xmlns:color="http://schemas.android.com/apk/res-auto">
    <string name="app_name">宝贝月读</string>
    <string name="img">img</string>
    <string name="main">我的</string>
    <string name="shopping_cart">购物车</string>
    <string name="search_hint">搜索书名/关键字/类型</string>
    <string name="cancel">取消</string>
    <string name="search_history">搜索历史</string>
    <string name="hot_search">热门搜索</string>
    <string name="banner_img">banner_img</string>
    <string name="custom_exclusive">定制专属</string>
    <string name="no_custom_book_tips">没有定制书单\n去定制专属你的书单吧！</string>
    <string name="custom_books">定制书单</string>
    <string name="book_desc">比利时心灵成长…</string>
    <string name="_199_00">￥199.00</string>
    <string name="format_book_price">￥ %.2f</string>
    <string name="all_book">全部图书</string>
    <string name="ENLIGHTEN">启蒙</string>
    <string name="_0">0</string>
    <string name="subscribe_desc">2–3岁是一个比较特别的年龄段,\n这个时期的孩子语言、\n思维和行动等能力都迅速发展，开始有自我意识，从故事内容的选择上可以从之前的三段式重复增加有简单情节变化的绘本。</string>
    <string name="subscribe">订阅</string>
    <string name="has_subscribe">已订阅</string>
    <string name="product_list">商品列表</string>
    <string name="book_desc_2">世界名著全10册注音美绘本 7-12岁小学生语文新课标阅读儿</string>
    <string name="_1_3">1/3</string>
    <string name="book_detail">林素娥 \n\n美国密歇根州立大学博士，曾任台湾考试院考试委员会总召，前台湾大学外文系副教授。\n\n谢静惠\n\n台湾中国文化大学文学硕士，\n曾任台湾东西图书教材部总编辑、出版部编辑总监，\n现任台湾凯立智语文学校执行长。
    林素娥 \n\n美国密歇根州立大学博士，曾任台湾考试院考试委员会总召，前台湾大学外文系副教授。\n\n谢静惠\n\n台湾中国文化大学文学硕士，\n曾任台湾东西图书教材部总编辑、出版部编辑总监，\n现任台湾凯立智语文学校执行长</string>
    <string name="goods_detail">商品详情</string>
    <string name="library">书库</string>
    <string name="add_library">加入书库</string>
    <string name="vip_tips">每月可领取<span style="color:#FF870A">2</span>本定制图书</string>
    <string name="open_vip">开通年卡</string>
    <string name="order_detail">订单详情</string>
    <string name="user_address">北京市北京市朝阳区 印花提议元 6层出电梯左手边往前走到头办公室前面</string>
    <string name="address_tips">没有收货地址，请填写收货地址</string>
    <string name="user_center">用户中心</string>
    <string name="select_book_order">选书订单</string>
    <string name="order_state">订单状态：<span style="color:#fe564c">已完成</span></string>
    <string name="personal_data">个人资料</string>
    <string name="user_name">最爱大头猫</string>
    <string name="nick_name">昵称:</string>
    <string name="phone">手机号:</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="real_name">姓名:</string>
    <string name="real_name_hint">请输入真实姓名</string>
    <string name="sex">性别:</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="age">年龄</string>
</resources>