<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/img_custom_book"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/book1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/img"
        android:scaleType="fitCenter"/>
    <TextView
        android:id="@+id/text_custom_book_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/dark_charcoal"
        android:text="@string/book_desc"/>
    <TextView
        android:id="@+id/text_custom_book_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_199_00"
        android:textColor="@color/orange"/>
</LinearLayout>