<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="8dp"
    tools:context=".activity.BookDetailActivity">



    <ImageButton
        android:id="@+id/imgb_book_detail_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/img"
        android:src="@drawable/ic_radio_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imgb_book_detail_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/img"
        android:src="@drawable/ic_radio_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView_book_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_book_detail_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgb_book_detail_share"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager_detail"
                android:layout_width="0dp"
                android:layout_height="220dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/text_book_detail_count"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_radio_bg"
                android:text="@string/_1_3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pager_detail" />

            <TextView
                android:id="@+id/text_book_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="世界名著全10册注音美绘本 7-12岁小学生语文新课标阅读儿童文学课外名著美绘本书籍 "
                android:textColor="@color/dark_charcoal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_book_detail_count" />

            <LinearLayout
                android:id="@+id/linear_book_detail_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_book_detail_title">
<!--                <TextView-->
<!--                    android:id="@+id/text_book_detail_tag_item"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_marginEnd="10dp"-->
<!--                    android:background="@drawable/book_tag_bg"-->
<!--                    android:paddingHorizontal="8dp"-->
<!--                    android:text="文学"-->
<!--                    android:textColor="@color/coffee"-->
<!--                    android:textSize="14sp" />-->

<!--                <TextView-->
<!--                    android:id="@+id/text_book_detail_tag_item2"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_marginEnd="10dp"-->
<!--                    android:background="@drawable/book_tag_bg"-->
<!--                    android:paddingHorizontal="8dp"-->
<!--                    android:text="名著"-->
<!--                    android:textColor="@color/coffee"-->
<!--                    android:textSize="14sp" />-->
            </LinearLayout>

            <TextView
                android:id="@+id/text_book_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="￥ 169.00"
                android:textColor="@color/orange"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_book_detail_tag" />

            <TextView
                android:id="@+id/text_goods_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/goods_detail"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_book_detail_price" />

            <TextView
                android:id="@+id/text_goods_detail_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/book_detail"
                android:textColor="@color/dark_charcoal"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_goods_detail_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_book_detail_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/book_detail_library_bg"
        android:drawableStart="@drawable/ic_shopping_cart"
        android:drawablePadding="10dp"
        android:paddingHorizontal="50dp"
        android:text="@string/library"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_boo_detail_add_cart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/book_detail_add_library_bg"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_library"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_book_detail_cart"
        app:layout_constraintTop_toTopOf="@+id/btn_book_detail_cart" />
</androidx.constraintlayout.widget.ConstraintLayout>